--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Page Title</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="wiXdth=device-width, initial-scale=1">
 <style>
 * {
   box-sizing: border-box;
@@ -19,7 +19,7 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: #1abc9c;
+  background: ##00FFFF;
   color: white;
 }
 
