--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 !DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>Salvador's Epic Website</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="wiXdth=device-width, initial-scale=1">
 <style>
